# EcoOpen

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  LICENSE.txt  QUALITY_CONTROL_REPORT.md  README.md  SECURITY.md  SECURITY_UPDATES.md  demo.py  deploy.sh  ecoopen  ecoopen-frontend.service  ecoopen-nginx.conf  ecoopen.service  ecoopen_mp.py  ecoopen_output.csv  ecoopen_sample_results.csv  error_job_logs_summary.json  example.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.sh  seed.py  setup_conda.sh  successful_jobs_quality_summary.json  test_mongo.py  test_program_status.py  tt
.github/workflows/: ci.yml
EcoOpenGUI/: main.py  requirements.txt  run_gui.sh
EcoOpenPy/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  FINAL_REVIEW.md  LICENSE  LLM_REWORK_SUMMARY.md  MANIFEST.in  README.md  README_SIMPLE.md  config.yaml  ecoopen.py  ecoopen_api.py  ecoopen_browser.py  ecoopen_core.py  ecoopen_download_manager.py  ecoopen_download_nlp.py  ecoopen_llm_app.py  ecoopen_output.csv  ecoopen_output_from_pdfs.csv  ecoopen_results.csv  ecoopen_results_updated.csv  ecoopen_utils.py  llm_example.py  pyproject.toml  requirements.txt  requirements_llm.txt  run_ecoopen.py  setup.py  test_all_pdfs.py  test_basic_integration.py  test_dois.txt  test_llm_extraction.py  test_simple.py
EcoOpenPy/EcoOpen/: core.py  data_download.py  paper_download.py
EcoOpenPy/EcoOpen/utils/: journals.py
EcoOpenPy/Examples/: basic.py  output_example.csv  output_example2.csv  output_example3.csv
EcoOpenPy/ecoopen/: __init__.py  cli.py  constants.py  core.py  data_mining.py  ecoopen.py  find_dois.py  keywords.py  llm_extractor.py  utils.py  utils_misc.py
EcoOpenPy/ecoopen/utils/: __init__.py  pipeline_csv.py
EcoOpenPy/expected_output/: List_datasets_15_4_2025.csv  List_datasets_15_4_2025.ods  data_Availability.txt  dois.csv
EcoOpenPy/tests/: compare_ecoopen_oddpub.py  ecoopen_output.csv  main_test.py  main_test2.py  save_pipeline_results.py  single_test.py  test_core.py  test_ecoopen.py  test_extract_all_information.py  test_full_package_pipeline.py  test_full_pipeline.py  test_full_pipeline_dois.py  test_pdf_folder_pipeline.py  tt.py
app/: main.py
app/core/: config.py  errors.py  validation.py
app/models/: schemas.py
app/routes/: analyze.py  auth.py  export.py  health.py  tasks.py
app/services/: __init__.py  agent.py  availability.py  db.py  doi_registry.py  jobs.py  link_inspector.py  llm_client.py  mongo_ops.py  pdf_extractor_fitz.py  text_normalizer.py  title_resolver.py  worker_mongo.py
docs/: AGENT_PLAN.md
documentation/: paper.md
ecoopen/: README.md  cli.py  ecoopen.py  ecoopen_output.csv  pyproject.toml  requirements.txt
ecoopen/tests/: test_ecoopen.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js
frontend/src/components/: BatchAnalyze.vue  HealthStatus.vue  JobsView.vue  LoginView.vue  SettingsView.vue  SingleAnalyze.vue
tests/: README.md  __init__.py  conftest.py  test_analyze_title_source.py  test_analyze_title_source_api.py  test_api.py  test_auth_register.py  test_availability_extractor.py  test_config.py  test_debug_and_title_source.py  test_dispatcher_promotion.py  test_doi_extraction.py  test_export_doi_from_title_search_column.py  test_export_title_source_column.py  test_integration_sync_analyze.py  test_link_inspector.py  test_llm_retries.py  test_pdf_header_endpoints.py  test_ra_snippets.py  test_schemas.py  test_sentence_extraction.py  test_status_inference.py  test_tasks_logs.py  test_tasks_rerun.py  test_title_extraction_variants.py  test_title_resolver.py  test_validation.py  test_workflow_full.py
