[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoopen"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A package to process DOIs, download PDFs, and analyze data and code availability statements."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["DOI", "PDF", "data availability", "code availability", "open science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "requests",
    "spacy",
    "pyalex",
    "beautifulsoup4",
    "tqdm",
    "PyMuPDF",
]

[project.scripts]
ecoopen = "ecoopen.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ecoopen"
Repository = "https://github.com/yourusername/ecoopen"
Issues = "https://github.com/yourusername/ecoopen/issues"